# review_buddy

./: .env.example  .gitignore  01_fetch_metadata.py  02_abstract_filter.py  02_abstract_filter_AI.py  02_abstract_filter_ai.py  02_download_papers.py  03_download_papers.py  03a_institutional_login.py  03a_login_real_browser.py  03b_open_failed_papers.py  03c_download_with_chrome.py  04_deduplicate_extra.py  AI_FILTERING_LIMITATIONS.md  CHANGELOG.md  CHANGES_HPC_BRANCH.md  HPC_SETUP.md  INSTALL.md  QUICK_START_HPC.md  README.md  REFACTOR_SUMMARY.md  app.py  compare_filtering_strategies.py  config.yaml  demo.py  merge_batches.py  process_batch.py  pyproject.toml  query.txt  requirements.txt  run_filter_hpc.sh  run_filter_hpc_array.sh  split_papers_for_hpc.py  test_ai_setup.py  test_browser_download.py  test_cdp_connection.py  test_cdp_download.py  test_filter_config.py  test_sciencedirect.py
core/: __init__.py  config_loader.py  engines.py  filter_ai.py  filter_normal.py  io.py  postprocess.py  preprocess.py
data/: sample_papers.csv
docs/: ABSTRACT_FILTERING.md  AI_FILTERING_GUIDE.md  AI_FILTERING_IMPLEMENTATION.md  AI_FILTERING_QUICKSTART.md  AI_filtering pipeline  DEDUPLICATION.md  DOWNLOADER_GUIDE.md  FILTER_WORKFLOW_EXAMPLE.md  NEW_FEATURES_V2.md  QUERY_SYNTAX.md  ZOTERO_SETUP.md
reviewbuddy/: __init__.py  cli.py
scripts/: compare_filters.py  debug_pubmed_comparison.py  debug_searchers.py
src/: __init__.py  abstract_filter.py  ai_abstract_filter.py  config.py  llm_client.py  models.py  paper_searcher.py  progress.py  utils.py
src/searchers/: __init__.py  arxiv_searcher.py  browser_downloader.py  ieee_searcher.py  paper_downloader.py  pubmed_searcher.py  scholar_searcher.py  scopus_searcher.py  test_paper_downloader.py  zotero_client.py
tests/: __init__.py  conftest.py  test_config.py  test_filter_normal.py  test_io.py
